[gd_scene load_steps=2 format=3 uid="uid://c0fhba86qihty"]

[ext_resource type="Script" path="res://objects/world/GUI/PlayerGUI.gd" id="1_t52ku"]

[node name="PlayerGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t52ku")

[node name="CardsLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 21.0
offset_right = 1020.0
offset_bottom = 1020.0
text = "Cards"

[node name="HealthLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 570.0
offset_right = 1019.0
offset_bottom = 1569.0
text = "Health"

[node name="AmmoLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 600.0
offset_right = 1019.0
offset_bottom = 1599.0
text = "Ammo"

[node name="ToolGunLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 999.0
offset_bottom = 999.0

[node name="RoundLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -81.0
offset_top = 22.0
offset_right = 918.0
offset_bottom = 1021.0
grow_horizontal = 0
text = "Round"
